--- a/style.css
+++ b/style.css
@@ -213,7 +213,7 @@ background: linear-gradient(to right, #182848, #4b6cb7); /* W3C, IE 10+/ Edge, F
 	font-family: 'Nerko One', cursive;
 }
 #sp1{
-	color: white;
+	color: orange;
 	font-size:medium;
 	font-family: 'Nerko One', cursive;
 }
