--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ body {
     text-align: center;
     background-repeat: no-repeat;
     font-family: 'Pacifico', cursive;
+	background: #00d2ff;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to top, #3a7bd5, #00d2ff);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to top, #3a7bd5, #00d2ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
 .menu {
